--- a/src/main/resources/space/packet/example.yml
+++ b/src/main/resources/space/packet/example.yml
@@ -15,6 +15,8 @@ packet_1:
     set:
       - clickCount 10
       - addClickCount only 3 is *"itemCheck inv mainHand *'minecraft:wooden_hone'"
+    trigger:
+      - send packet
     pass:
       - remove
       - kether shell...
