--- a/src/main/resources/space/quest/cropQuest/inner/crop_start/target.yml
+++ b/src/main/resources/space/quest/cropQuest/inner/crop_start/target.yml
@@ -37,7 +37,7 @@ target:
     name: task go to location
     period: 10
     async: true
-    condition:
+    conditions:
       - where
     time: minute 10
     reward: 2 false
