--- a/src/main/resources/space/quest/cropQuest/setting.yml
+++ b/src/main/resources/space/quest/cropQuest/setting.yml
@@ -28,8 +28,6 @@ accept:
   # 条件 Kether
   condition:
     - permission *quest.crop.1
-    - check player name is *inrhor
-    - check player balance > *100
 # 关于任务失败设置，满足条件自动放弃
 failure:
   check: 1
@@ -37,4 +35,4 @@ failure:
     - check player balance < *100
   # 脚本 Kether
   kether:
-    - title *"&c任务失败" subtitle *"&f采集农作物任务"
+    - title color *"&c任务失败" subtitle color *"&f采集农作物任务"
