--- a/src/main/resources/space/quest/cropQuest/inner/crop_start/control.yml
+++ b/src/main/resources/space/quest/cropQuest/inner/crop_start/control.yml
@@ -3,35 +3,32 @@ highest:
   # 记录控制运行索引，以防意外可选择调用
   log:
     # 是否启用
-    enable: true
+    enable: false
     # restart [重启]
     # memory [记忆]
     # index int [索引]
-    type: index 10
+    type: memory
   kether:
-    - packet send packet_1 where location *world *96 *75 *-206
-    - enterPacket to packet_1
     - waitTime s 5 to @quest the highest
-    - subtitle *"&f这是田园农庄场"
+    - subtitle color *"&f这是田园农庄场"
     - waitTime s 3 to @quest the highest
-    - title *"&6农民" subtitle *"&f现在赋予你一个职位"
+    - title color *"&6农民" subtitle color *"&f现在赋予你一个职位"
     - waitTime s 3 to @quest the highest
-    - subtitle *"&f请你采集这一片农作物"
+    - subtitle color *"&f请你采集这一片农作物"
     - waitTime s 3 to @quest the highest
-    - subtitle *"&a完成后我将会给予你丰厚奖励"
+    - subtitle color *"&a完成后我将会给予你丰厚奖励"
     - player loaction to location *world *96 *73 *-206
     - player gamemode to *survival
 # 普通控制
 normal:
   log:
     # 是否启用
-    enable: true
+    enable: false
     type: memory
     # 重新时的调用
     reKether:
       - control @this index 1
   kether:
-    - title *"&a已接受新任务" subtitle *"&f采集农作物任务"
-    - packet send packet_3 number 30 where location *world *96 *72 *-206 type circle 5 1
+    - title color *"&a已接受新任务" subtitle color *"&f采集农作物任务"
     - waitTime minute 5 to @quest the normal
-    - subtitle *"&c任务即将结束，请注意"
+    - subtitle color *"&c任务即将结束，请注意"
