--- a/src/main/resources/space/dialog/example.yml
+++ b/src/main/resources/space/dialog/example.yml
@@ -31,16 +31,11 @@ dialog_1:
   reply:
     reply_1:
       content:
-        - hitBox dir left add 2.5 1.5 sizeX 3 3 sizeY 3 3 sizeZ 3 3 long 5 item item_2 boxY 2
+        - hitBox dir left add 2.5 1.5 sizeX 3 3 sizeY 3 3 sizeZ 3 3 long 5 item item_2 use suspend boxY 2
         - initLoc dir left add 2.0 1.5
         - nextY -1.0
         - text "&c&l牛逼！！！"
         - text "&f&l666666"
         - item item_1 suspend
       script:
-        - ""
-    r2:
-      content:
-        - ""
-      script:
-        - ""
+        - dialog end dialog_1
