--- a/src/main/resources/space/dialog/example.yml
+++ b/src/main/resources/space/dialog/example.yml
@@ -2,7 +2,7 @@
 dialog_1:
   # 交互NPC
   npcIDs:
-    - "test"
+    - test
   # 对话需要满足的触发条件
   condition:
     - permission *dialog.prm.1
@@ -21,21 +21,52 @@ dialog_1:
   dialog:
     - initLoc dir left add 2.5 2.5
     - nextY 1.2
-    - reply 20
+    - replyAll 20
     - text <textWrite 40 2 "&3&lQuest &f&lEngine"><textWrite 20 2 "&r   &c&l任&e&l务&a&l引擎">
     - nextY -0.3
     - text <textWrite 10 3 "&f&l面向异世界的任务系统">
     - addLoc dir right add 5.5 1.0
     - itemWrite 20 use suspend item item_1
     - itemWrite 60 use fixed item item_2
+  # 关于回复
   reply:
+    # 回复ID
     reply_1:
+      # 弹出该回复的条件，空或不填的话必弹出
+      # 支持 Kether 布尔值语句
+      condition: []
       content:
         - hitBox dir left add 2.5 1.5 sizeX 3 3 sizeY 3 3 sizeZ 3 3 long 5 item item_2 use suspend boxY 2
         - initLoc dir left add 2.0 1.5
         - nextY -1.0
-        - text "&c&l牛逼！！！"
-        - text "&f&l666666"
+        - text "&c&l你好世界 Hello World"
+        - text "&3&l欢迎使用全息对话系统"
         - item item_1 suspend
       script:
         - dialog end dialog_1
+
+
+# 对话ID
+dialog2:
+  # 继承了父对象的属性（除了dialog）
+  hook: dialog_1
+  dialog:
+    - reply 20 rep
+  reply:
+    rep:
+      condition:
+        - tags has hello
+      content:
+        - hitBox dir left add 2.5 1.5 sizeX 3 3 sizeY 3 3 sizeZ 3 3 long 5 item item_2 use suspend boxY 2
+        - initLoc dir left add 2.0 1.5
+        - item item_2 fixed
+      script:
+        - dialog end dialog_2
+
+# 对话ID
+dialog3:
+  # 继承了父对象的属性（除了dialog）
+  hook: dialog_1
+  # 可以直接调用父对象的回复项
+  dialog:
+    - reply 20 reply_1
