--- a/src/main/resources/space/dialog/example.yml
+++ b/src/main/resources/space/dialog/example.yml
@@ -24,7 +24,7 @@ dialog_1:
     - replyAll 20
     - text <textWrite 40 2 "&3&lQuest &f&lEngine"><textWrite 20 2 "&r   &c&l任&e&l务&a&l引擎">
     - nextY -0.3
-    - text <textWrite 10 3 "&f&l面向异世界的任务系统"><emptyWrite 10 3 true "&f&l这是一个打字型，打印到一定长度后会消除前面字符噢">
+    - text <textWrite 10 3 "&f&l面向异世界的任务系统">
     - addLoc dir right add 5.5 1.0
     - itemWrite 20 use suspend item item_1
     - itemWrite 60 use fixed item item_2
