--- a/src/main/resources/space/quest/cropQuest/setting.yml
+++ b/src/main/resources/space/quest/cropQuest/setting.yml
@@ -30,7 +30,7 @@ accept:
   # 条件 Kether
   condition:
     - permission *quest.crop.1
-# 关于任务失败设置，满足条件自动放弃
+# 关于任务失败设置，满足条件自动放弃x
 failure:
   check: 1
   condition:
