--- a/src/main/resources/ui/handbook/questNote.yml
+++ b/src/main/resources/ui/handbook/questNote.yml
@@ -14,7 +14,7 @@ already:
       - ""
   target:
     note:
-      - "@now_target.click"
+      - "@target.click;"
     click:
       text:
         - "&7&l[ &3&l查看当前任务目标 &7&l]"
@@ -22,7 +22,7 @@ already:
         - "&7&l[ &a&l点击 &7&l]"
   inner:
     note:
-      - "@inner.click"
+      - "@inner.click;"
     click:
       text:
         - "&7&l[ &3&l查看内部任务列表 &7&l]"
@@ -30,11 +30,11 @@ already:
         - "&7&l[ &a&l点击 &7&l]"
   quit:
     note:
-      - "@quit.click"
+      - "@quit.click;"
     condition:
       - "#!quest-finish"
     click:
       text:
         - "&7&l[ &c&l点击放弃任务 &7&l]"
-        hover:
-          - "&7&l[ &a&l点击 &7&l]"
+      hover:
+        - "&7&l[ &a&l点击 &7&l]"
