--- a/src/main/resources/ui/handbook/sort.yml
+++ b/src/main/resources/ui/handbook/sort.yml
@@ -9,7 +9,7 @@ sort:
   new:
     # 内容物
     note:
-      - "&7&l< &8&l新手任务 &7&l>  @new.click"
+      - "&7&l< &8&l新手任务 &7&l>  @new.click;"
     # JSON标签
     click:
       text:
@@ -19,4 +19,4 @@ sort:
   daily:
     # 内容物
     note:
-      - "&7&l< &8&l每日任务 &7&l>  @daily-new.click"
+      - "&7&l< &8&l每日任务 &7&l>  @daily-new.click;"
