--- a/src/main/resources/ui/handbook/questNote.yml
+++ b/src/main/resources/ui/handbook/questNote.yml
@@ -20,6 +20,7 @@ already:
         - "&7&l[ &3&l查看当前任务目标 &7&l]"
       hover:
         - "&7&l[ &a&l点击 &7&l]"
+      command: "/qen handbook target #quest-id"
   inner:
     note:
       - "@inner.click;"
@@ -28,6 +29,7 @@ already:
         - "&7&l[ &3&l查看内部任务列表 &7&l]"
       hover:
         - "&7&l[ &a&l点击 &7&l]"
+      command: "/qen handbook inner #quest-id"
   quit:
     note:
       - "@quit.click;"
@@ -38,3 +40,4 @@ already:
         - "&7&l[ &c&l点击放弃任务 &7&l]"
       hover:
         - "&7&l[ &a&l点击 &7&l]"
+      command: "/qen quest quit #quest-id"
