--- a/src/main/resources/ui/handbook/questNote.yml
+++ b/src/main/resources/ui/handbook/questNote.yml
@@ -20,7 +20,7 @@ already:
         - "&7&l[ &3&l查看当前任务目标 &7&l]"
       hover:
         - "&7&l[ &a&l点击 &7&l]"
-      command: "/qen handbook target #quest-id"
+      command: "/qen handbook target #quest-uuid"
   inner:
     note:
       - "@inner.click;"
