--- a/src/main/resources/space/quest/cropQuest/inner/crop_start/target.yml
+++ b/src/main/resources/space/quest/cropQuest/inner/crop_start/target.yml
@@ -7,9 +7,9 @@ target:
     ui:
       desc:
         note:
-          - "&r挖掘石块 &a3 &r个"
-          - "    &r进度 &8(0)"
-          - "    &r剩余时间 &8(1)"
+          - "&8挖掘石块 &a3 &8个"
+          - "    &8进度 &6{0}"
+          - "    &8剩余时间 &c{1}"
           - ""
   3:
     name: player death
@@ -20,6 +20,6 @@ target:
     time: minute 1
     reward: 2 true
     description:
-      - "&r体验舒适的天堂"
-      - "    &r进度 &8(0)"
+      - "&8体验舒适的天堂"
+      - "    &8进度 &6{0}"
       - ""
