--- a/src/main/resources/space/dialog/example.yml
+++ b/src/main/resources/space/dialog/example.yml
@@ -23,7 +23,7 @@ dialog1:
     - nextY -0.3 # 设置源位置递增的Y轴，使每行内容换行而不重叠
     - replyAll 20 # 20 tick后显示全部回复内容
     - text {{write}} {{&3&lQuest &f&lEngine&r   &c&l任&e&l务&a&l引擎}} # 选择打字型输出
-    - text {{&f&l面向异世界的任务系统}} # 完整显示
+    - text {{delay 60}} {{&f&l面向异世界的任务系统}} # 60tick后 完整显示文字
     - text {{writeClear out}} {{&f&l这是一个打字型，打印完毕后&c&l会清除掉}} # 自清除打字型，并完整发送到聊天框
     - nextY 0.0 # 设置源位置递增的Y轴为0，使得上下自清空标签打字型可在同一位置显示
     - text {{&3&l继续打印下一段对话内容}} {{write out}} # 选择打字型输出，并完整发送到聊天框，可调换标签位置
