--- a/src/main/resources/space/quest/cropQuest/inner/crop_start/option.yml
+++ b/src/main/resources/space/quest/cropQuest/inner/crop_start/option.yml
@@ -1,14 +1,15 @@
-# 内部任务ID
-innerQuestID: "mainQuest1"
+inner:
+  # 内部任务ID
+  id: "mainQuest1"
 
-# 内部任务名称
-innerQuestName: "收集家"
+  # 内部任务名称
+  name: "收集家"
 
-# 下一个内部任务ID，空则无
-nextInnerQuestID: ""
+  # 下一个内部任务ID，空则无
+  nextInnerQuestID: ""
 
-# 内部任务描述
-# 显示于内部任务信息任务手册
-description:
-  - "&a这是一个关于农业的任务主线之一"
-  - "&r   收集家"
+  # 内部任务描述
+  # 显示于内部任务信息任务手册
+  description:
+    - "&a这是一个关于农业的任务主线之一"
+    - "&r   收集家"
