--- a/src/main/resources/space/quest/cropQuest/setting.yml
+++ b/src/main/resources/space/quest/cropQuest/setting.yml
@@ -37,7 +37,7 @@ quest:
     condition:
       - permission *quest.test
     # 脚本 Kether
-    kether:
+    script:
       - title color *"&c任务失败" subtitle color *"&f采集农作物任务"
 
 
