--- a/src/main/resources/space/dialog/example.yml
+++ b/src/main/resources/space/dialog/example.yml
@@ -40,7 +40,7 @@ dialog1:
       # 支持 Kether 布尔值语句
       condition: []
       content:
-        - hitBox {{sizeX 3 3}} {{sizeY 3 3}} {{sizeZ 3 3}} {{long 5}} {{item item_2}} {{use suspend}} {{boxY 2}}
+        - hitBox {{sizeX 3 3}} {{sizeY 3 3}} {{sizeZ 3 3}} {{long 5}} {{item item_2}} {{use suspend}} {{boxY 2}} {{view}}
         - initLoc {{add 2.0 1.5}} {{dir left}}
         - nextY -1.0
         - text {{&c&l你好世界 Hello World}}
@@ -65,7 +65,7 @@ dialog2:
       condition:
         - tags has hello
       content:
-        - hitBox {{sizeX 3 3}} {{sizeY 3 3}} {{sizeZ 3 3}} {{long 5}} {{item item_2}} {{use suspend}} {{boxY 2}}
+        - hitBox {{sizeX 3 3}} {{sizeY 3 3}} {{sizeZ 3 3}} {{long 5}} {{item item_2}} {{use suspend}} {{boxY 2}} {{view}}
         - initLoc {{dir left}} {{add 2.0 1.5}}
         - item {{item item_2}} {{use fixed}}
       script:
