--- a/src/main/resources/space/dialog/example.yml
+++ b/src/main/resources/space/dialog/example.yml
@@ -2,11 +2,10 @@
 dialog1:
   # 交互NPC
   npcIDs:
-    - test
+    - "1"
   # 对话需要满足的触发条件
   condition:
     - permission *dialog.prm.1
-    - check player name is *inrhor
   # 对话空间设置
   space:
     # 是否启用
@@ -77,5 +76,4 @@ dialog3:
   hook: dialog1
   # 可以直接调用父对象的回复项
   dialog:
-    - reply 20 reply_1 # 释放父dialog_1对象的回复项的 reply_1 回复ID
-    - replyAll 20 # 释放全部回复项（包括父对象的回复项）
+    - reply 20 reply1 # 释放父dialog1对象的回复项的 reply1 回复ID
