--- a/src/main/resources/ui/handbook/innerQuestList.yml
+++ b/src/main/resources/ui/handbook/innerQuestList.yml
@@ -1,9 +1,8 @@
-head:
-  - "     &7&l< &8&l内部任务列表 &7&l>"
-  - ""
-  - "&8&l&m                       "
-
 for:
+  head:
+    - "     &7&l< &8&l内部任务列表 &7&l>"
+    - ""
+    - "&8&l&m                       "
   # 内容物
   fork:
     - ""
@@ -11,9 +10,10 @@ for:
     - "     @{1};"
     - ""
   # JSON标签
-  click:
-    condition: []
-    text:
-      - "&7&l[ &6&l点击阅览 &7&l]"
-    hover:
-      - "&7&l[ &a&l点击 &7&l]"
+    addon:
+      - id: click
+        condition: []
+        text:
+          - "&7&l[ &6&l点击阅览 &7&l]"
+        hover:
+          - "&7&l[ &a&l点击 &7&l]"
