--- a/src/main/resources/ui/handbook/sort.yml
+++ b/src/main/resources/ui/handbook/sort.yml
@@ -1,22 +1,23 @@
-head:
-  - "       &7&l< &8&l任务列表 &7&l>"
-  - ""
-  - "&8&l&m                       "
-
 # 任务手册标签分类
 sort:
-  # 标签
-  new:
-    # 内容物
-    note:
-      - "&7&l< &8&l新手任务 &7&l>  @new.click;"
-    # JSON标签
-    click:
+  head:
+    - "       &7&l< &8&l任务列表 &7&l>"
+    - ""
+    - "&8&l&m                       "
+  part:
+    # 标签
+    - id: new
+      # 内容物
+      note:
+        - "&7&l< &8&l新手任务 &7&l>  @click;"
+    - id: daily
+      # 内容物
+      note:
+        - "&7&l< &8&l每日任务 &7&l>  @click;"
+  # JSON标签
+  addon:
+    - id: click
       text:
         - "&7&l[ &3&l阅览 &7&l]"
       hover:
         - "&7&l[ &a&l点击 &7&l]"
-  daily:
-    # 内容物
-    note:
-      - "&7&l< &8&l每日任务 &7&l>  @daily-new.click;"
