1 - 1.5.0  2022/5/13 - 任务目标失败不再自动设置任务失败，任务失败由用户通过语句控制

--- a/src/main/resources/space/quest/cropQuest/inner_1.yml
+++ b/src/main/resources/space/quest/cropQuest/inner_1.yml
@@ -33,7 +33,7 @@ inner:
         name: break block
         # 时间框架
         time:
-          # 类型: ALWAYS, WEEKLY, MONTHLY, YEARLY, CUSTOM
+          # 类型: ALWAYS, DAY, WEEKLY, MONTHLY, YEARLY, CUSTOM
           type: WEEKLY
           duration: 1,00:00:00>1,23:59:59
           # monthly  duration: 20,00:00:00>31,15:30:00
