--- a/src/main/resources/space/quest/cropQuest/inner_1.yml
+++ b/src/main/resources/space/quest/cropQuest/inner_1.yml
@@ -16,16 +16,14 @@ inner:
       - # 奖励ID
         id: "1"
         # 脚本支持 Kether
-        script:
-          - ""
-          - ""
+        script: |
+          subtitle color "&3奖励ID 1"
       - id: "2"
-        script:
-          - ""
+        script: |
+          subtitle color "&3奖励ID 2"
     # 任务失败后触发脚本
-    fail:
-      - ""
-      - ""
+    fail: |
+      subtitle color "&c内部任务失败"
     # 任务目标列表
     target:
       - id: hello
@@ -78,16 +76,18 @@ inner:
         # memory [记忆]
         # index int [索引]
         type: memory
-      script:
-        - waitTime s 2
-        - subtitle color *"&f这是田园农庄场"
-        - waitTime s 3
-        - title color *"&6农民" subtitle color *"&f现在赋予你一个职位"
-        - waitTime s 3
-        - subtitle color *"&f请你采集这一片农作物"
-        - waitTime s 3
-        - subtitle color *"&a完成后我将会给予你丰厚奖励"
-        - player gamemode to *survival
+      script: |
+        @this
+        sleep 2s
+        subtitle color *"&f这是田园农庄场"
+        sleep 3s
+        title color *"&6农民" subtitle color *"&f现在赋予你一个职位"
+        sleep 3s
+        subtitle color *"&f请你采集这一片农作物"
+        sleep 3s
+        subtitle color *"&a完成后我将会给予你丰厚奖励"
+        player gamemode to *survival
+        control end level 1
     -
       id: control2
       # 普通控制
@@ -97,9 +97,11 @@ inner:
         enable: false
         type: memory
         # 重新时的调用
-        recall:
-          - control @this index 1
-      script:
-        - title color *"&a已接受新任务" subtitle color *"&f采集农作物任务"
-        - waitTime minute 5
-        - subtitle color *"&c任务即将结束，请注意"
+        recall: |
+          @this
+          control index 1
+      script: |
+        title color *"&a已接受新任务" subtitle color *"&f采集农作物任务"
+        sleep 25s
+        subtitle color *"&c任务即将结束，请注意"
+        control end level 0
